manifests/07-ingress/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: nextcloud-headers
  namespace: nextcloud
spec:
  headers:
    hostsProxyHeaders:
      - "X-Forwarded-Host"
    customRequestHeaders:
      X-Forwarded-Proto: "http"
